[SALEOR-3088] Date & DateTime attributes (#1180)

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -957,6 +957,14 @@
     "context": "boolean attribute type",
     "string": "Boolean"
   },
+  "src_dot_attributes_dot_components_dot_AttributeDetails_dot_date": {
+    "context": "date attribute type",
+    "string": "Date"
+  },
+  "src_dot_attributes_dot_components_dot_AttributeDetails_dot_dateTime": {
+    "context": "date time attribute type",
+    "string": "Date Time"
+  },
   "src_dot_attributes_dot_components_dot_AttributeDetails_dot_distance": {
     "context": "distance units type",
     "string": "Distance"
@@ -2756,6 +2764,9 @@
   },
   "src_dot_dashboard": {
     "string": "Dashboard"
+  },
+  "src_dot_date": {
+    "string": "Date"
   },
   "src_dot_delete": {
     "context": "button",
@@ -6652,6 +6663,10 @@
   },
   "src_dot_taxes_dot_views_dot_2411670026": {
     "string": "Successfully fetched tax rates"
+  },
+  "src_dot_time": {
+    "context": "independent of any particular day, eg. 11:35",
+    "string": "Time"
   },
   "src_dot_translations": {
     "context": "translations section name",
