--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -1298,6 +1298,10 @@
     "context": "order status",
     "string": "Cancelled"
   },
+  "src_dot_cannotFullfillUnpaidOrder": {
+    "context": "disabled option description",
+    "string": "Can’t fulfill until payment is captured"
+  },
   "src_dot_catalog": {
     "string": "Catalog"
   },
@@ -3707,10 +3711,6 @@
     "context": "button",
     "string": "Finalize"
   },
-  "src_dot_orders_dot_components_dot_OrderFulfillPage_dot_cannotFullfillUnpaid": {
-    "context": "button tooltip",
-    "string": "Can’t fulfill until payment is captured"
-  },
   "src_dot_orders_dot_components_dot_OrderFulfillPage_dot_headerOrder": {
     "context": "page header",
     "string": "Order"
@@ -3762,10 +3762,6 @@
   "src_dot_orders_dot_components_dot_OrderFulfilledProductsCard_dot_cancelFulfillment": {
     "context": "button",
     "string": "Cancel Fulfillment"
-  },
-  "src_dot_orders_dot_components_dot_OrderFulfilledProductsCard_dot_cannotFullfillWarning": {
-    "context": "approve button disable description",
-    "string": "Can’t fulfill until payment is captured"
   },
   "src_dot_orders_dot_components_dot_OrderFulfilledProductsCard_dot_editTracking": {
     "context": "edit tracking button",
