--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3958,6 +3958,10 @@
     "context": "order history message",
     "string": "Products were added to an order"
   },
+  "src_dot_orders_dot_components_dot_OrderHistory_dot_3927123907": {
+    "context": "order history message",
+    "string": "Fulfilled {quantity} items awaits approval"
+  },
   "src_dot_orders_dot_components_dot_OrderHistory_dot_393045022": {
     "context": "order history message",
     "string": "Invoice no. {invoiceNumber} was updated"
