--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6464,7 +6464,7 @@
     "string": "These are general information about your store. They define what is the URL of your store and what is shown in browsers taskbar."
   },
   "src_dot_somethingWentWrong": {
-    "string": "Saleor ran into an unexpected problem"
+    "string": "Uyghur Store ran into an unexpected problem"
   },
   "src_dot_staff": {
     "context": "staff section name",
